# doors-2d

./: Cargo.toml  Makefile  README.md  SECURITY.md  TODO.md
.github/workflows/: rust.yml
src/: camera.rs  cli.rs  constants.rs  environ.rs  floorplan.rs  main.rs  movement.rs  platform.rs  player.rs  state.rs
src/camera/: camera_component.rs  camera_plugin.rs  camera_systems.rs  mod.rs
src/door/: door_component.rs  door_plugin.rs  door_systems.rs  mod.rs
src/environ/: environ_component.rs  environ_plugin.rs  environ_systems.rs  mod.rs
src/integration/: integration_plugin.rs  integration_utils.rs  mod.rs
src/integration/k8s/: k8s_integration_plugin.rs  k8s_integration_systems.rs  k8s_utils.rs  mod.rs
src/integration/k8s_file/: k8s_integration_systems.rs
src/integration/k8s_live/: k8s_api.rs  k8s_integration_plugin.rs  k8s_integration_systems.rs  mod.rs
src/integration/test_mode/: test_mode_plugin.rs  test_mode_systems.rs
src/movement/: mod.rs  movement_component.rs  movement_plugin.rs  movement_systems.rs
src/pause/: mod.rs  pause_component.rs  pause_plugin.rs  pause_system.rs
src/perf/: mod.rs  perf_component.rs  perf_plugin.rs  perf_system.rs
src/platform/: mod.rs  platform_component.rs  platform_plugin.rs  platform_systems.rs
src/player/: player_component.rs  player_plugin.rs  player_systems.rs
src/room/: mod.rs  room_component.rs  room_plugin.rs  room_systems.rs
src/schedule/: mod.rs  schedule_component.rs  schedule_plugin.rs
src/scheduler/: mod.rs  schedule_plugin.rs
src/state/: state_component.rs  state_plugin.rs  state_system.rs
