[package]
name = "doors"
version = "0.2.3"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15" }
bevy_embedded_assets = "0.12"
leafwing-input-manager = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
avian2d = "0.2"
bevy_lunex = "0.2"
petgraph = "0.7"
bevy_aseprite_ultra = "0.4"
clap = { version = "4", features = ["derive", "color"] }
bevy_lit = "0.6"
serde_yaml = "0.9.34"
jsonpath_lib = "0.3.0"
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24", features = ["latest"] }
tokio = { version = "1", features = ["full", "macros"] }

[dev-dependencies]
bevy_dylib = "0.15"
