[package]
name = "doors"
version = "0.2.4"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian2d = "0.2"
bevy = { version = "0.15" }
bevy-tokio-tasks = "0.15.0"
bevy_aseprite_ultra = "0.4"
bevy_embedded_assets = "0.12"
bevy_lit = "0.6"
bevy_lunex = "0.2"
clap = { version = "4", features = ["derive", "color"] }
jsonpath_lib = "0.3"
k8s-openapi = { version = "0.24", features = ["latest"] }
kube = { version = "0.98", features = ["runtime", "derive"] }
leafwing-input-manager = "0.16"
petgraph = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full", "macros"] }

[dev-dependencies]
bevy_dylib = "0.15"

[features]
default = ["k8s"]
k8s = []

