[package]
name = "doors"
version = "0.3.3"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian2d = "0.2"
bevy = { version = "0.15" }
bevy-tokio-tasks = "0.15"
bevy_aseprite_ultra = "0.4"
bevy_embedded_assets = "0.12"
bevy_lit = "*"
bevy_lunex = "0.3"
clap = { version = "4", features = ["derive", "color"] }
iyes_perf_ui = "0.4"
jsonpath_lib = "0.3"
k8s-openapi = { version = "0.25", features = ["latest"] }
kube = { version = "1", features = ["runtime", "derive"] }
leafwing-input-manager = "0.16"
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full", "macros"] }

[dev-dependencies]
bevy_dylib = "0.15"

[features]
default = ["k8s"]
k8s = []
perfmon = []

